# owlracle-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: example.ipynb  example.py
owlracle_python/: __init__.py  owlracle.py
tests/: test_owlracle_api.py
